# project-ult-subsystem-news

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTERFACE_STABILITY.md  PROGRESS.md  REGRESSION_BASELINE.md  TASK_BREAKDOWN.md  subsystem-news.project-doc.md
scripts/: measure_graph_fp.py  replay_diff.py
src/subsystem_news/: __init__.py  errors.py  public.py  version.py
src/subsystem_news/contracts/: __init__.py  article.py  candidates.py  cluster.py  evidence.py  source_reference.py  sources.py  taxonomy.py
src/subsystem_news/dedupe/: __init__.py  cluster.py  conflict.py  fingerprint.py  identity.py  similarity.py  store.py
src/subsystem_news/entities/: __init__.py  fallback.py  mention.py  quick_path.py  resolution.py  resolver_client.py
src/subsystem_news/extract/: __init__.py  evidence.py  fact_extractor.py  prompt.py  runtime_client.py  schema_pin.py
src/subsystem_news/fixtures/: __init__.py  approved_sources.invalid.sample.json  approved_sources.sample.json  approved_sources.valid.sample.json  catalog.py  loader.py  metrics.py  runner.py
src/subsystem_news/fixtures/entities/: ambiguous_alias.json  cross_language_alias.json  fuzzy_short_name.json  html_rss_normalized.json  registry_error.json  single_source_standard.json  topic_only.json
src/subsystem_news/fixtures/extract/: all_unresolved_boundary.json  cluster_representative_event.json  evidence_out_of_bounds_negative.json  multi_sentence_event.json  (+3 more)
src/subsystem_news/graph/: __init__.py  candidate_builder.py  evidence_guard.py  prompt.py  relation_extract.py  schema_pin.py
src/subsystem_news/normalize/: __init__.py  fingerprint_seed.py  html_strip.py  pipeline.py  text_clean.py  time_parse.py
src/subsystem_news/runtime/: __init__.py  artifact_store.py  backend_config.py  cli.py  models.py  orchestrator.py  pipeline.py  replay.py  submit.py  trace.py
src/subsystem_news/signals/: __init__.py  aggregator.py  direction_judge.py  magnitude.py  promotion_rules.py  schema_pin.py
src/subsystem_news/sources/: __init__.py  api.py  base.py  discover.py  registry.py  rss.py  site_html.py  trace.py
tests/: __init__.py  test_package_layout.py
tests/boundary/: __init__.py  test_red_lines.py
tests/contract/: __init__.py  test_contracts_alignment.py  test_runtime_contract.py
tests/contract_stability/: test_backend_config.py  test_backend_switch.py  test_ex2_contract_stability.py  test_replay_contract_metadata.py
tests/contracts/: test_candidate_schema.py  test_cluster_schema.py  test_sources_schema.py  test_taxonomy.py
tests/dedupe/: __init__.py  helpers.py  test_cluster.py  test_conflict.py  test_fingerprint.py  test_integration_normalized_artifacts.py  test_similarity.py  test_store.py
tests/entities/: test_integration.py  test_mention.py  test_resolution.py
tests/extract/: test_fact_extractor.py
tests/graph/: test_relation_extract.py
tests/integration/: test_milestone3_pipeline.py  test_milestone4_graph_pipeline.py  test_sdk_wire_shape_integration.py
tests/normalize/: test_fingerprint_seed.py  test_html_strip.py  test_pipeline.py  test_text_clean.py  test_time_parse.py
tests/regression/: test_fixture_loader.py  test_measure_graph_fp.py  test_metrics.py  test_runner_cli.py  test_submit_receipts.py  test_with_shared_fixtures_news.py
tests/runtime/: test_artifact_store.py  test_cli.py  test_orchestrator.py  test_replay.py  test_submit.py  test_trace.py
tests/signals/: __init__.py  helpers.py  test_aggregator.py  test_direction_judge.py  test_magnitude.py  test_promotion_rules.py
tests/smoke/: __init__.py  test_public_smoke.py
tests/sources/: __init__.py  test_base.py  test_discover_fetch.py  test_registry.py  test_registry_policy_adapters.py  test_trace.py
tests/unit/: __init__.py
(+42 files in other folders)
