[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-subsystem-news"
version = "0.1.0"
description = "Scaffold workspace for subsystem-news."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
