[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-subsystem-news"
version = "0.1.1"
description = "News understanding subsystem (Ex-1 / Ex-2 / Ex-3 candidate emission via subsystem-sdk) for project-ult."
readme = "README.md"
# Capped lower at 3.11 (subsystem-sdk + contracts both support 3.11+); upper
# cap MUST match subsystem-sdk@v0.1.2 (>=3.11,<3.13) so news inherits the
# dagster wheel compatibility window for assembly e2e. Stage 2.9 follow-up
# #1 (codex review #1 P2 #4): aligned the metadata with the SDK pin —
# previously the comment claimed inheritance but the actual constraint
# was just ">=3.11", which advertised compatibility on 3.13/3.14 that a
# clean install can't satisfy (subsystem-sdk wheel rejects).
requires-python = ">=3.11,<3.13"
dependencies = [
    # Lightweight runtime deps.
    "pydantic>=2.6",
    "structlog>=24.1",
    "httpx>=0.27",
    # Cross-repo SDK dep — version constraint (NOT git+URL) per stage 2.8
    # template (announcement / entity-registry pattern). CI lanes preinstall
    # the pinned tag in their 3-step install (contracts -> subsystem-sdk
    # -> repo) per Makefile + ci.yml documented order. base dep
    # `subsystem-sdk>=0.1.2` is the current approved baseline (Stage 2.8
    # follow-up #3 Op2 release; includes contracts >=0.1.3 transitively).
    "project-ult-subsystem-sdk>=0.1.2",
    # contracts is news's transitive dep via subsystem-sdk; its version-
    # constraint floor is declared in subsystem-sdk@v0.1.2's own pyproject
    # (`project-ult-contracts>=0.1.3`), so we don't repeat it here. CI
    # preinstalls contracts@v0.1.3 BEFORE subsystem-sdk so pip can resolve
    # subsystem-sdk's contracts dep. (Stage 2.8 follow-up #3 Op1 release.)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["subsystem_news*"]

[project.optional-dependencies]
# Stage-2 plan iron rule #3 split:
# - dev: offline-first pure-pip (test-fast / smoke lanes use only this).
# - contracts-schemas: cross-repo source-of-truth pin (contract lane).
# - shared-fixtures: real audit-eval fixtures (regression lane).
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
]
contracts-schemas = [
    "project-ult-contracts @ git+https://github.com/shenfanjie5-bit/project-ult-contracts.git@v0.1.3",
]
shared-fixtures = [
    # Pinned to v0.2.5 (bumped 2026-05-01 stage 1 consistency lane to
    # align all 10 consumers with the audit-eval producer release).
    "project-ult-audit-eval @ git+https://github.com/shenfanjie5-bit/project-ult-audit-eval.git@v0.2.5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
